--- a/Todo.txt
+++ b/Todo.txt
@@ -1,19 +1,19 @@
 🚩 Deadline Tanggal 25 Mei 2023
 🔥 TODO LIST 🔥
 
--> Proses Cetak Laporan Penyerahan Sampah untuk Admin ⚡
-    => Data yang dapat dicetak adalah data dengan status diterima dan ditolak
-    => Membuat halaman cetak laporan dengan fitur: ⚡
-        ~~ Cetak semua transaksi
-        ~~ Cetak transaksi perbulan
+-> Proses Cetak Laporan Penyerahan Sampah untuk Admin
+    => Data yang dapat dicetak adalah data dengan status diterima dan ditolak 🆗
+    => Membuat halaman cetak laporan dengan fitur: 🆗
+        ~~ Cetak semua transaksi 🆗
+        ~~ Cetak transaksi perbulan ⚡
 
--> Proses Cetak Laporan Penukaran Poin untuk Admin 🟡
-    => Data yang dapat dicetak adalah data dengan status selesai
+-> Proses Cetak Laporan Penukaran Poin untuk Admin
+    => Data yang dapat dicetak adalah data dengan status selesai 🆗
     => Membuat halaman cetak laporan dengan fitur:
-        ~~ Cetak semua transaksi
-        ~~ Cetak transaksi perbulan
+        ~~ Cetak semua transaksi 🆗
+        ~~ Cetak transaksi perbulan ⚡
 
--> Proses penukaran poin ⚡
+-> Proses penukaran poin 
     => QR Code ✅
     => Kode yang digunakan adalah id document ✅
     => Batas Waktu, jika melewati batas waktu status menjadi batal 🟡
@@ -28,11 +28,14 @@
         ~~ Mengupdate jumlah poin warga ✅
         ~~ Fungsi Cetak Bukti Penukaran Poin ✅
 
+-> Fitur Tambahan:
+    => Notifikasi
+    => Forgot password
+    => Verifikasi email
 
 -> Errors
     => Kirim data (argument) dari Home View ke Halaman Tukar ✅
     => Auto Login 🔵
-    => Ketika selesai malakukan tukar poin ✅
 
 
 Keterangan:
