--- a/Todo.txt
+++ b/Todo.txt
@@ -1,47 +1,35 @@
-🚩 Deadline Tanggal 25 Mei 2023
 🔥 TODO LIST 🔥
 
--> Proses Cetak Laporan Penyerahan Sampah untuk Admin
-    => Data yang dapat dicetak adalah data dengan status diterima dan ditolak 🆗
-    => Membuat halaman cetak laporan dengan fitur: 🆗
-        ~~ Cetak semua transaksi 🆗
-        ~~ Cetak transaksi perbulan ⚡
-
--> Proses Cetak Laporan Penukaran Poin untuk Admin
-    => Data yang dapat dicetak adalah data dengan status selesai 🆗
-    => Membuat halaman cetak laporan dengan fitur:
-        ~~ Cetak semua transaksi 🆗
-        ~~ Cetak transaksi perbulan ⚡
-
--> Proses penukaran poin 
-    => QR Code ✅
-    => Kode yang digunakan adalah id document ✅
-    => Batas Waktu, jika melewati batas waktu status menjadi batal 🟡
-    => Menampilkan Informasi Penting, jika status masih proses ✅
-    => Proses Konfirmasi Oleh Admin Desa:
-        ~~ Masuk Ke halaman detail penukaran ✅
-        ~~ Halaman detail penukaran membaca scan QR Code dari aplikasi warga, jika status proses ✅
-        ~~ Setelah Scan QR data akan diambil dan di cocokkan dengan id penukaran ✅
-        ~~ Jika data sama, status menjadi selesai dan menampilkan tanda centang ✅
-        ~~ Menampilkan tombol cetak bukti penukaran (PDF atau Gambar)  ✅
-        ~~ Mengupdate collection transaksi sampah dan collection kirim (User warga) ✅
-        ~~ Mengupdate jumlah poin warga ✅
-        ~~ Fungsi Cetak Bukti Penukaran Poin ✅
-
--> Fitur Tambahan:
-    => Notifikasi
-    => Forgot password
-    => Verifikasi email
-
--> Errors
-    => Kirim data (argument) dari Home View ke Halaman Tukar ✅
-    => Auto Login 🔵
+ ==========================================
+🔵 Create
+    - Batas Waktu Penukaran
+    - Notifikasi Permintaan Pengambilan
+    - Lupa Password (Optional)
+    - Verifikasi Email (Optional)
 
 
-Keterangan:
-⚡ ON Progress
-🟣 Belum Testing
-🔵 Perlu diubah 
-🟡 0% Progress
-🆗 Selesai 80%
-✅ Selesai 100%
+==========================================
+⚪ Modify
+    - Konfirmasi Penukaran Poin
+    - Cetak Transaksi Sampah & Poin
+    - Model Transaksi Sampah
+
+
+==========================================
+🟣 Progress
+
+
+
+==========================================
+🟢 Done
+    - Konfirmasi Pengambilan Sampah
+
+
+
+==========================================
+🟡 Done Without Test
+
+
+
+==========================================
+🔴 Error
