On branch master Your branch is up to date with 'origin/master'.
22 Juni 2023
- Fix bagian tabel cetak transaksi sampah
- Fix orderBy confirmTime pada halaman permintaan pengambilan, riwayat pengambilan, transaksi poin dan transaksi sampah
- Create index pada firestore
- Fix proses menyimpan transaksi penukaran pada file tukar_controller.dart

Changes to be committed:
	modified:   Todo.txt
	modified:   lib/app/screens/home/admin/transaksi_sampah/transaksisampah_controller.dart
	modified:   lib/app/screens/home/petugas/request_pengambilan/request_pengambilan.dart
	modified:   lib/app/screens/home/petugas/riwayat_pengambilan/riwayat_pengambilan.dart
	modified:   lib/app/screens/home/tukar/tukar_controller.dart

--- a/Todo.txt
+++ b/Todo.txt
@@ -44,3 +44,7 @@
 - Mencoba menambahkan 0.1 untuk setiap jumlah sampah organik dan anorganik pada firestore, digunakan untuk test cetak transaksi
 - Cetak transaksi poin Berhasil
 - Cetak transaksi sampah masih error (Tidak dapat menampilkan nilai int ke double dan tidak dapat mengambil data semua jenis transaksi dan dengan waktu transaksi bulan atau per hari ini)
+
+- Fix bagian tabel cetak transaksi sampah
+- Fix orderBy confirmTime pada halaman permintaan pengambilan, riwayat pengambilan, transaksi poin dan transaksi sampah
+- Create index pada firestore
