On branch master Your branch is up to date with 'origin/master'.
27 Juni 2023
- Fix function batas waktu penukaran
- Menambahkan proses validasi status transaksi poin
- Menghapus beberapa line code yang tidak digunakan

Changes to be committed:
	modified:   Todo.txt
	modified:   lib/app/screens/home/admin/transaksi_poin/transaksipoin_controller.dart
	modified:   lib/app/screens/home/tukar/detail_produk.dart
	modified:   lib/app/screens/home/tukar/riwayat_tukar.dart
	modified:   lib/app/screens/home/tukar/tukar_controller.dart

--- a/Todo.txt
+++ b/Todo.txt
@@ -9,17 +9,16 @@
 
 ==========================================
 ⚪ Modify
-    - Konfirmasi Penukaran Poin 
 
 
 ==========================================
 🟣 Progress
-    - Batas Waktu Penukaran
 
 
 
 ==========================================
 🟢 Done
+    - Batas Waktu Penukaran
     - Konfirmasi Pengambilan Sampah
     - Model Transaksi Sampah
     - Cetak Transaksi Poin
@@ -28,6 +27,7 @@
 
 ==========================================
 🟡 Done Without Test
+    - Konfirmasi Penukaran Poin 
     
 
 
@@ -53,3 +53,8 @@
 - Menambahkan fitur batas waktu
 - Menambahkan fungsi status transaksi auto batal jika batas melewati batas waktu
 - Mengganti routing dari halaman tukar ke riwayat tukar
+
+27 Juni 2023
+- Fix function batas waktu penukaran
+- Menambahkan proses validasi status transaksi poin
+- Menghapus beberapa line code yang tidak digunakan
