--- a/Todo.txt
+++ b/Todo.txt
@@ -58,3 +58,6 @@
 - Fix function batas waktu penukaran
 - Menambahkan proses validasi status transaksi poin
 - Menghapus beberapa line code yang tidak digunakan
+
+28 Juni 2023
+- Merapikan code pada file add_petugas_controller.dart
