On branch master Your branch is up to date with 'origin/master'.
05 Juli 2023
- Merapikan halaman tambah petugas
- Menambah extensions Peacock

Changes to be committed:
	modified:   .vscode/settings.json
	modified:   Todo.txt
	modified:   lib/app/screens/home/admin/add_petugas/add_petugas.dart

--- a/Todo.txt
+++ b/Todo.txt
@@ -8,8 +8,8 @@
 
 
 ==========================================
-⚪ Modify
-
+⚪ Modify & Cek
+    - Menambahkan fungsi logout saat admin menambahkan akun petugas
 
 ==========================================
 🟣 Progress
@@ -64,3 +64,6 @@
 
 29 Juni 2023
 - Merapikan code pada file kirim.dart
+
+05 Juli 2023
+- Merapikan halaman tambah petugas
