On branch master Your branch is up to date with 'origin/master'.
10 Juli 2023
- Fix cetak transaksi
- Menambahkan fungsi logout untuk akun petugas yang berhasil ditambahkan, dan login ulang untuk admin (Belum test)

Changes to be committed:
	modified:   Todo.txt
	modified:   lib/app/screens/home/admin/add_petugas/add_petugas_controller.dart
	modified:   lib/app/screens/home/petugas/request_pengambilan/request_pengambilan_controller.dart

--- a/Todo.txt
+++ b/Todo.txt
@@ -67,3 +67,7 @@
 
 05 Juli 2023
 - Merapikan halaman tambah petugas
+
+10 Juli 2023
+- Fix cetak transaksi
+- Menambahkan fungsi logout untuk akun petugas yang berhasil ditambahkan, dan login ulang untuk admin (Belum test)
