On branch master Your branch is up to date with 'origin/master'.
14 Juli 2023
- Menambahkan file firebase_api.dart, untuk menghandle Notifikasi
- Notifikasi background

Changes to be committed:
	modified:   Todo.txt
	modified:   android/app/src/main/AndroidManifest.xml
	new file:   lib/app/screens/firebase_api.dart
	modified:   lib/app/screens/home/home_view.dart
	modified:   lib/main.dart

--- a/Todo.txt
+++ b/Todo.txt
@@ -72,3 +72,7 @@
 
 12 Juli 2023
 - Fix pendaftaran akun petugas
+
+14 Juli 2023
+- Menambahkan file firebase_api.dart, untuk menghandle Notifikasi
+- Notifikasi background
