On branch master Your branch is up to date with 'origin/master'.
15 Juli 2023
- Membuat fungsi untuk handle local notifications
- Menambahkan platform channel id pada file AndroidManifest.xml
- Menambahkan icon aplikasi pada folder drawabel dan drawabel-v21, digunakan untuk icon notifikasi
- Membuat fungsi untuk handle send notifications to spesific users (Petugas)
- Membuat fungsi untuk mengambil data token dari collection users (Petugas)
- Membuat fungsi get data dari fungsi mengambil data token petugas
- Downgrade versi flutter_local_notifications pada pubspec.yaml

Changes to be committed:
	modified:   Todo.txt
	modified:   android/app/src/main/AndroidManifest.xml
	new file:   android/app/src/main/res/drawable-v21/launcher_icon.png
	new file:   android/app/src/main/res/drawable/launcher_icon.png
	modified:   lib/app/screens/firebase_api.dart
	modified:   lib/app/screens/home/home_view.dart
	modified:   lib/app/screens/home/kirim/kirim.dart
	modified:   lib/app/screens/home/kirim/kirim_controller.dart
	modified:   pubspec.lock
	modified:   pubspec.yaml

--- a/Todo.txt
+++ b/Todo.txt
@@ -76,3 +76,11 @@
 14 Juli 2023
 - Menambahkan file firebase_api.dart, untuk menghandle Notifikasi
 - Notifikasi background
+
+15 Juli 2023
+- Membuat fungsi untuk handle local notifications
+- Menambahkan platform channel id pada file AndroidManifest.xml
+- Menambahkan icon aplikasi pada folder drawabel dan drawabel-v21, digunakan untuk icon notifikasi
+- Membuat fungsi untuk handle send notifications to spesific users (Petugas)
+- Membuat fungsi untuk mengambil data token dari collection users (Petugas)
+- Membuat fungsi get data dari fungsi mengambil data token petugas
