On branch master Your branch is up to date with 'origin/master'.
15 Juli 2023
- Testing fungsi notofikasi
- Menambahkan fungsi untuk kirim notifikasi di tombol Kirim pada file kirim.dart

Changes to be committed:
	modified:   Todo.txt
	new file:   android/app/src/main/res/drawable-v21/ic_launcher_foreground.png
	new file:   android/app/src/main/res/drawable/ic_launcher_foreground.png
	modified:   lib/app/screens/home/kirim/kirim.dart

--- a/Todo.txt
+++ b/Todo.txt
@@ -84,3 +84,7 @@
 - Membuat fungsi untuk handle send notifications to spesific users (Petugas)
 - Membuat fungsi untuk mengambil data token dari collection users (Petugas)
 - Membuat fungsi get data dari fungsi mengambil data token petugas
+
+15 Juli 2023
+- Testing fungsi notofikasi
+- Menambahkan fungsi untuk kirim notifikasi di tombol Kirim pada file kirim.dart
