On branch master Your branch is up to date with 'origin/master'.
16 Juli 2023
- Fix fungsi kirim notifikasi dan Testing
- Hasil testing sesuai harapan (Fitur notifikasi DONE)

Changes to be committed:
	modified:   Todo.txt
	modified:   lib/app/screens/firebase_api.dart
	modified:   lib/app/screens/home/kirim/kirim.dart

--- a/Todo.txt
+++ b/Todo.txt
@@ -88,3 +88,7 @@
 15 Juli 2023
 - Testing fungsi notofikasi
 - Menambahkan fungsi untuk kirim notifikasi di tombol Kirim pada file kirim.dart
+
+16 Juli 2023
+- Fix fungsi kirim notifikasi dan Testing
+- Hasil testing sesuai harapan (Fitur notifikasi DONE)
